contact us update

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:BXBNJUbudY8goz13N5zMbyhJj7BftKEEKDHq70FxoFs=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=api_salon
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=api_salon
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -63,3 +63,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+MIDTRANS_SERVER_KEY=SB-Mid-server-BaLsLzAddQfD1zXrOFakGLBy
+MIDTRANS_CLIENT_KEY=SB-Mid-client-5lJRk_wPmSz-Bbca
+MIDTRANS_IS_PRODUCTION=false
+
+WABLAS_API_KEY=XV9RFUGPnymmm43gGOMNMGqYK0gK0XpkAENLNnKjgX1tTSxEI0Vtzpi
